@@ -16,6 +16,7 @@
 
 == feedback
 
+- Denis Ahearn - create if missing issue
 - Koen Handekyn - documentation issue
 - yzhang - reconnect issue
 - Chad Albers - https://github.com/neomantic
